# gzip-hpp

./: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
include/gzip/: compress.hpp  decompress.hpp
